  [ Christian Perrier ]
  * Translations:
    - Nepali (Shyam Krishna Bal).  Closes: #614694

  [ Bill Allombert ]
  * Allow cron.daily to run if last run was more than 7 day ago. 
    Patch from Vagrant Cascadian. Closes: #610876 
  * FAQ: document how to disable sending report by email. Thanks, Ryo Furue.
    Closes: #502159

 -- Bill Allombert <ballombe@debian.org>  Sun, 20 Mar 2011 13:31:30 +0100

popularity-contest (1.51) unstable; urgency=low

  [ Christian Perrier ]
  * Really fix Pre-Depends "debconf (>= 1.5.34) | cdebconf (>= 0.106)"
    to properly handle Serbian (Latin) debconf translations.
    Closes: #610840

 -- Bill Allombert <ballombe@debian.org>  Mon, 24 Jan 2011 16:10:12 +0100

popularity-contest (1.50) unstable; urgency=low

  [ Christian Perrier ]
  * Pre-Depend on debconf (>= 1.5.34) to properly handle Serbian (Latin)
    debconf translation
  * Translations:
    - Serbian (Janos Guljas).  Closes: #600123
    - Serbian in Latin script (Janos Guljas).  Closes: #600124

 -- Bill Allombert <ballombe@debian.org>  Thu, 23 Dec 2010 12:24:36 +0100

popularity-contest (1.49) unstable; urgency=low

  [ Bill Allombert ]
  * popcon.pl:
    - sync with popcon.debian.org version: add source (max) ratings.
  * debian/control: 
    - Build-Depends: raise debhelper version to (>=5) to match compat.
    - Updated Standards-Version from 3.8.1 to 3.9.1.  No change needed.

  [ Christian Perrier ]
  * Translations:
    - Telugu. Closes: #544044
    - Italian (Milo Casagrande).  Closes: #559503
    - Simplified Chinese (苏运强).
    - Slovenian (Vanja Cvelbar).  Closes: #570103
    - Persian added (Vahid Ghaderi).  Closes: #587010,#587078
    - Kazakh (Sarsenov D.).  Closes: #587100
    - Bosnian (Safir Secerovic).

 -- Bill Allombert <ballombe@debian.org>  Sat, 09 Oct 2010 19:13:27 +0200

popularity-contest (1.48) unstable; urgency=low

  [ Bill Allombert ]
  * popcon.pl:
    - sync with popcon.debian.org version: add release names.
  * popularity-contest: 